gulp task browserSync &  CRON & updated code
