# lib/user/userRoute.js
@@ -10,7 +10,9 @@ const validators=require("./userValidators");
 
 
 
-
+/**
+*@ Creating new entry into system
+*/
 
 usrRoutr.route('/register')
 .post([validators.validateRegister,validators.changeName],(req,res)=>{
@@ -22,8 +24,9 @@ usrRoutr.route('/register')
         });
 });
 
-
-
+/**
+*@ Authenticating user
+*/
 
 usrRoutr.route("/login")
     .post([validators.validateLogin],(req, res)=> {
@@ -38,91 +41,88 @@ usrRoutr.route("/login")
         });
     });
 
+/**
+*@ Getting current user props
+* token value needed
+*/
 
-usrRoutr.route("/currentUser").get((req,res)=>{
+usrRoutr.route("/currentUser")
+.get((req,res)=>{
     usrFacade.currentUser(req)
         .then(result=> resHndlr.sendSuccess(res,result))
     .catch(err =>  resHndlr.sendError(res, err));
 });
 
+/**
+*@ searching user friends
+* token value needed
+*/
 
-
-usrRoutr.route("/search_friends").get([middleware.authenticate.autntctTkn],(req,res)=>{
+usrRoutr.route("/search_friends")
+.get([middleware.authenticate.autntctTkn],(req,res)=>{
     usrFacade.search_friends(req)
         .then(result=> resHndlr.sendSuccess(res,result))
     .catch(err =>  resHndlr.sendError(res, err));
-})
+});
 
+/**
+*@ creating room for chat using client uuid
+* token value needed
+*/
 
+usrRoutr.route("/createRoom")
+.post([middleware.authenticate.autntctTkn],(req,res)=>{
+    usrFacade.createRoom(req)
+    .then(result=> resHndlr.sendSuccess(res,result))
+    .catch(err =>  resHndlr.sendError(res, err));
+});
 
+/**
+*@ Sending message to uuids
+* token value needed
+*/
 
-// usrRoutr.route("/getUserProfile")
-//     .post([middleware.authenticate.autntctTkn], function (req, res) {
-//           let { user } = req;
-//         let userId = user.userId;
-//         usrFacade.getUserProfile(userId)
-//             .then(function (result) {
-//                 resHndlr.sendSuccess(res, result);
-//             }).catch(function (err) {
-//                 resHndlr.sendError(res, err);
-//             })
+usrRoutr.route("/sendMessage")
+.post([middleware.authenticate.autntctTkn],(req,res)=>{
+     usrFacade.sendMessage(req)
+    .then(result=> resHndlr.sendSuccess(res,result))
+    .catch(err => resHndlr.sendError(res, err));
+});
 
-//     });
-// usrRoutr.route("/applyForTripOrganizer")
-//     .post([middleware.authenticate.autntctTkn], function (req, res) {
-//           let { user } = req;
-//           console.log(user);
-//         usrFacade.applyForOrganizer({user})
-//             .then(function (result) {
-//                 resHndlr.sendSuccess(res, result);
-//             }).catch(function (err) {
-//                 resHndlr.sendError(res, err);
-//             })
+/**
+*@ Sending friend request
+* token value and body uuid needed
+*/
+usrRoutr.route('/sendRequest')
+    .post([middleware.authenticate.autntctTkn],(req,res)=>{
+         usrFacade.sendRequest(req)
+    .then(result=> resHndlr.sendSuccess(res,result))
+    .catch(err => resHndlr.sendError(res, err));
+    });
 
-//     });
-// usrRoutr.route("/addConnection")
-//     .post([middleware.authenticate.autntctTkn,validators.validateUserId], function (req, res) {
-//          let { invitedByUserId } = req.body;
-//           let { user } = req;
-//            let userId = user.userId; 
-//         usrFacade.addConnection({invitedToUserId:userId,invitedByUserId:invitedByUserId})
-//             .then(function (result) {
-//                 resHndlr.sendSuccess(res, result);
-//             }).catch(function (err) {
-//                 resHndlr.sendError(res, err);
-//             })
+/**
+*@ Getting users notifications
+* token value needed
+*/
+usrRoutr.route('/showUserFriendRequests')
+.get([middleware.authenticate.autntctTkn],(req,res)=>{
+    usrFacade.showUserFriendRequests(req.user)
+    .then(result=> resHndlr.sendSuccess(res,result))
+    .catch(err => resHndlr.sendError(res, err));
+});
 
-//     });
+/**
+*@ Accept/Reject users Request
+* token value needed
+*/
 
-// usrRoutr.route("/getConnection")
-//     .post([middleware.authenticate.autntctTkn,validators.validateGetConnectionPageList], function (req, res) {
-//           let { user } = req;
-//            let userId = user.userId; 
-//            let { pageNo, count,searchText } = req.body;
-//         usrFacade.getConnections({userId,pageNo,count,searchText })
-//             .then(function (result) {
-//                 resHndlr.sendSuccess(res, result);
-//             }).catch(function (err) {
-//                 resHndlr.sendError(res, err);
-//             })
-
-//     });
-
-// usrRoutr.route("/userBlockRequest")
-//     .post([middleware.authenticate.autntctTkn,validators.validateUsersId], function (req, res) {
-//          let { userId } = req.body;
-//           let { user } = req;
-        
-//         usrFacade.userBlockRequest({userId,user})
-//             .then(function (result) {
-//                 resHndlr.sendSuccess(res, result);
-//             }).catch(function (err) {
-//                 resHndlr.sendError(res, err);
-//             })
-
-//     });
-
-
-
-
+usrRoutr.route('/acceptRejectFriendRequests')
+.get([middleware.authenticate.autntctTkn],(req,res)=>{
+    usrFacade.acceptRejectFriendRequests(req.query)
+    .then(result=> resHndlr.sendSuccess(res,result))
+    .catch(err => resHndlr.sendError(res, err));
+});
+/** 
+Exporting module
+*/
 module.exports = usrRoutr;
